feat(audit): add persistent audit/journal table for run + stage metrics